--- a/index.html
+++ b/index.html
@@ -15,6 +15,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/16f867cbbe.js" crossorigin="anonymous"></script>
+<!-- global -->
+<!-- Global site tag (gtag.js) - Google Ads: 10889220152 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-10889220152"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-10889220152');
+</script>
+<!-- event -->
+<!-- Event snippet for Compra conversion page -->
+<script>
+    gtag('event', 'conversion', {
+        'send_to': 'AW-10889220152/quRLCO_mr7YDELigscgo',
+        'transaction_id': ''
+    });
+  </script>
+  
 </head>
 <body>
 
@@ -35,7 +54,7 @@
               
               <spacer/><spacer/>
 
-                <btn onclick="window.open('https://app.monetizze.com.br/r/ADD20271552?src=redmaxtvPV', '_blank');">
+                <btn onclick="window.open('https://app.monetizze.com.br/r/ADD20271552?src=redmaxtvPV', '_self');">
                   <btn-t>ACESSE O SITE COM DESCONTO!</btn-t>
                 </btn>
                 <spacer/>
