--- a/indexNormal.html
+++ b/indexNormal.html
@@ -15,6 +15,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/16f867cbbe.js" crossorigin="anonymous"></script>
+<!-- global -->
 <!-- Global site tag (gtag.js) - Google Ads: 10889220152 -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-10889220152"></script>
 <script>
@@ -29,7 +30,7 @@
 <body>
 
     <appbar>
-        <hdln0>Desconto <red>exclusivo</red> para o dia das <gold> Mães! </gold> </hdln0>
+        <hdln0>Desconto <red>exclusivo</red> e frete grátis para todo o Brasil</hdln0>
     </appbar>
 
     <header>
@@ -43,27 +44,12 @@
               <!--  [ VIDEO ]  -->
               <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/hQ4dl33ZiFE?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               
-              <spacer class="sp2"></spacer>
+              <spacer/><spacer/>
 
-              <row>
-                  <t16>Acesse o link para comprar com o desconto especial para o dia das Mães!</t16>
-              </row>
-              <row>
-                  <t16>clicando no botão abaixo</t16>
-              </row>
-              <row><img class="seta" src="assets/imgs/setaParaBaixo.svg" alt=""></row>
-              <spacer class="sp8"></spacer>
-              <btn onclick="window.open('https://app.monetizze.com.br/r/ADD20271552?u=c&pl=BL162896&src=redmaxtvPV', '_self');">
-                <btn-t>DESCONTO DIA DAS MÃES!</btn-t>
-              </btn>
-              <row>
-                  <t16>ou</t16>
-              </row>
-              <spacer></spacer>
-                <btn onclick="window.open('https://app.monetizze.com.br/r/ADD20271552?src=redmaxtvPV', '_blank');">
-                  <btn-t>ACESSE O SITE!</btn-t>
+                <btn onclick="window.open('https://app.monetizze.com.br/r/ADD20271552?src=redmaxtvPV', '_self');">
+                  <btn-t>ACESSE O SITE COM DESCONTO!</btn-t>
                 </btn>
-
+                <spacer/>
                 <row>
                     <img class="compra" src="assets/imgs/ICONES_min.png" alt="">
                 </row>
@@ -73,13 +59,9 @@
         </scaffold>
       </header>
 
-
-      
-      <!--  -->
-      <rodape>
-          <scaffold>
-        <spacer class="sp8"></spacer>
-        <spacer class="sp8"></spacer>
+<!--  -->
+<rodape>
+    <scaffold>
         <txt>Somos uma empresa de E-commerce, Importante: Esta página não tem qualquer vínculo com o Facebook S/A e suas empresas, apenas usamos a plataforma para promover os nossos produtos. Ao sair da plataforma toda responsabilidade sobre produtos vendidos e ofertados é de inteira responsabilidade da nossa empresa, bem como se houver quaisquer eventualidades legais. Declaramos que o Facebook S/A não tem qualquer vínculo de associação em processos civeis ou criminais.Nosso email de suporte é: contato@formuladevendas.com.br .Não compre produtos piratas, não vendemos em marketplaces como: Mercado Livre, Shopee, Aliexpress, Facebook, Olx etc.Não damos suporte a produtos comprados nestes canais.</txt>
         <row>
             <column>
@@ -90,7 +72,7 @@
                             | 
                             <a href="termos.html">Termos de Uso</a>
                         </f-txt>
-                        <spacer></spacer>
+                        <spacer/>
                     </row>
                 </row>
             </column>
