--- a/indexDiaDasMaes.html
+++ b/indexDiaDasMaes.html
@@ -15,15 +15,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/16f867cbbe.js" crossorigin="anonymous"></script>
+<!-- global -->
 <!-- Global site tag (gtag.js) - Google Ads: 10889220152 -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-10889220152"></script>
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=AW-10889220152"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'AW-10889220152');
-</script>
+</script> -->
   
 </head>
 <body>
